--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,31 @@
-<p style="color: white;">home works! <a href="https://www.dejan.works/">idea link</a></p>
+<!-- <p style="color: white;">home works! <a href="https://www.dejan.works/">idea link</a></p> -->
+<div class="tap-area" (click)="tapClick()">
+    <div class="tap-indication">Tap Anywhere</div>
+</div>
+
+<div class="max-width">
+    <div class="vertical-center">
+        <h1>
+            <div class="hide-text-block">
+                <a href="#">
+                    <div class="text-before label-hello" #first1></div>
+                    <div class="text-after" #second1>About</div>
+                </a>
+            </div>
+            <div class="hide-text-block">
+                <a href="#">
+                    <div class="text-before label-iam" #first2></div>
+                    <div class="text-after" #second2>Work</div>
+                </a>
+            </div>
+            <div class="hide-text-block">
+                <a href="#">
+                    <div class="text-before label-name" #first3></div>
+                    <div class="text-after" #second3>Contact</div>
+                </a>
+            </div>
+        </h1>
+    </div>
+</div>
+
+<div class="bg-photo"></div>
