--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,60 @@
-<p>about works!</p>
+<div class="block-image-overflow">
+    <div class="max-width">
+        <div class="logo">
+            <div class="logo-inner" id="logo">
+                <a [routerLink]="['/home']">
+                    <div class="logo-text"></div>
+                </a>
+            </div>
+        </div>
+        <div class="top-bottom-margin">
+            <div class="hide-text-block">
+                <h2>I design & build digital products</h2>
+            </div>
+            <div class="hero-image">
+                <img src="https://www.dejan.works/img/Dejan.png">
+            </div>
+            <div class="about-text">
+                <h4>About</h4>
+                <p class="subhead">
+                    Hi, I’m Dejan. I'm a multi-talented human with over 10+ years of experiences in wide
+                    range of design disciplines.
+                </p>
+                <p>
+                    You can also call me a product designer, experience designer, interaction, UI, UX or by any other
+                    market defined function-title. I'm also a multi-disciplinary maker with over 10 years of experiences
+                    in wide range of design disciplines, manager, advisor, entrepreneur, front-end developer, music
+                    enthusiast, traveler, photographer and more.
+                </p>
+                <p>
+                    I don’t like to define myself by the work I’ve done. I define myself by the work I want to do. Skills
+                    can be taught, personality is inherent. I prefer to keep learning, continue challenging myself, and
+                    do interesting things that matter.
+                </p>
+                <p>
+                    Fueled by high energy levels and boundless enthusiasm, I’m easily inspired and more then willing to
+                    follow my fascinations wherever they take me. I’m passionate, expressive, multi-talented spirit with
+                    a natural ability to entertain and inspire. I’m never satisfied to just come up with ideas. Instead
+                    I have an almost impulsive need to act on them.
+                </p>
+                <p>
+                    My abundant energy fuels me in the pursuit of many interests, hobbies, areas of study and artistic
+                    endeavors. I’m a fast learner, able to pick up new skills and juggle different projects and roles
+                    with relative ease.
+                </p>
+                <p>
+                    I like to develop expertise in a number of areas over the course of my life and career. My
+                    personality type is <a href="http://www.personalitypage.com/ENTJ.html" target="_blank"> ENTJ</a>. I currently work
+                    remotely with a selected freelance client base and are open for new opportunities.
+                </p>
+                <p>
+                    You can read more about my biography, experience, skills, education and much more in the PDF
+                    attached bellow:
+                </p>
+                <div class="links" data-aos="fade-up">
+                    <a href="https://www.dejan.works/files/Dejan_Markovic_CV.pdf" target="_blank">My resume (pdf 109kb) </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
